2004-08-24 Alain Magloire

	Fix for PR 72078
	* model/org/eclipse/cdt/internal/core/model/CModelStatus.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java

2004-08-23 Chris Wiebe

	fix for 68210 - add missing cpp header names
	* org/eclipse/cdt/core/template/cpp_headers

2004-08-23 Alain Magloire

	Fix for 72382
	* src/org/eclipse/cdt/core/internal/filetype/WorkspaceResolver.java

2004-08-21 Alain Magloire

	(Partial, since the indexer is still not aware of this)
	Fix for 66559: Work on the ResolverModel
	* model/org/eclipse/cdt/internal/core/model/ResolverProcessor.java
	* src/org/eclipse/cdt/core/internal/filetype/ResolverModel.java
	* src/org/eclipse/cdt/core/internal/filetype/WorkspaceResolver.java

2004-08-20 Chris Wiebe

	make PathUtil visible
	* browser/org/eclipse/cdt/internal/core/browser/PathUtil.java
	* browser/org/eclipse/cdt/internal/core/browser/TypeReference.java
	* browser/org/eclipse/cdt/internal/core/browser/TypeSearchScope.java

2004-08-18 Alain Magloire

	Work on the ResolverModel, we make the Core Model aware of the changes.
	Noticeable changes ICFileTypeResolver is tied to a container, this change
	things considerably when extending the implementations.  Sam orignal works
	did not with some pros && cons .. this also has pros and cons.

	* model/org/eclipse/cdt/internal/core/model/CModelManager.java
	* model/org/eclipse/cdt/internal/core/model/ResolverProcessor.java

	* src/org/eclipse/cdt/core/filetype/ICFielTypeResolver.java
	* src/org/eclipse/cdt/core/filetype/IResolverChangeListener.java
	* src/org/eclipse/cdt/core/filetype/IResolverModel.java
	* src/org/eclipse/cdt/core/filetype/ResolverChangeEvent.java
	* src/org/eclipse/cdt/core/filetype/ResolverDelta.java

	* src/org/eclipse/cdt/core/internal/filetype/CFileTypeResolver.java
	* src/org/eclipse/cdt/core/internal/filetype/CustomResolver.java
	* src/org/eclipse/cdt/core/internal/filetype/ResolverModel.java