@@ -55,7 +55,7 @@ public class CProject extends Openable implements ICProject {
 	private static final String CUSTOM_DEFAULT_OPTION_VALUE = "#\r\n\r#custom-non-empty-default-value#\r\n\r#"; //$NON-NLS-1$
 
 	public CProject(ICElement parent, IProject project) {
-		super(parent, project, CElement.C_PROJECT);
+		super(parent, project, ICElement.C_PROJECT);
 	}
 
 	public IBinaryContainer getBinaryContainer() throws CModelException {
@@ -493,10 +493,12 @@ public class CProject extends Openable implements ICProject {
 			if (pinfo.sourceRoots != null) {
 				roots = pinfo.sourceRoots;
 			} else {
-				roots = pinfo.sourceRoots = (ISourceRoot[])computeSourceRoots().toArray(new ISourceRoot[computeSourceRoots().size()]);				
+				List list = computeSourceRoots();
+				roots = pinfo.sourceRoots = (ISourceRoot[])list.toArray(new ISourceRoot[list.size()]);				
 			}
 		} else {
-			roots = (ISourceRoot[])computeSourceRoots().toArray(new ISourceRoot[computeSourceRoots().size()]);
+			List list = computeSourceRoots();
+			roots = (ISourceRoot[])list.toArray(new ISourceRoot[list.size()]);
 		}
 		return roots;
 	}
