@@ -1,3 +1,9 @@
+2004-08-25 Alain Magloire
+
+	Fix for PR 72078
+	* model/org/eclipse/cdt/internal/core/mode/CProject.java
+	* model/org/eclipse/cdt/internal/core/mode/PathEntryManager.java
+	
 2004-08-24 Alain Magloire
 
 	Fix for PR 72078
